[metadata]
name = complex_xml_to_csvs
version = 0.0.1
author = Fekete Krisztian, CEU Microdata
author-email = feketek@ceu.hu
summary = Spread Complex's XML files into lots of CSVs
description-file = README
license = Proprietary
home-page = https://github.com/ceumicrodata/complex_xml_to_csvs
requires-python = >=2.7
classifier =
	Development Status :: 3 - Alpha
    Environment :: Console
    License :: Other/Proprietary License

[entry_points]
console_scripts =
	complex-xml-to-csvs = complex_xml_to_csvs.complex_xml_to_csvs:main
	rovat-dir-to-csv = complex_xml_to_csvs.rovat_dir_to_csv:main
